--- a/src/pages/createProduct/styleCreateProduct.css
+++ b/src/pages/createProduct/styleCreateProduct.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     width: 70%;
-    height: 35vh;
+    height: 30vh;
 }
 .first .cont-creat-img{
     width: 30%;
@@ -71,13 +71,16 @@
     justify-content: space-between;
 }
 .selectCreate{
-    width: 30%;
+    width: 22%;
 }
 .selectCreate::after{
     top: -10px;
-    left: 16%;
+    left: 22%;
 }
 .selectCreate select{
     width: 99%;
     border-radius: 7px;
+}
+.btn-create{
+    margin-top: 22px;
 }
